--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -30,6 +30,7 @@
             "error",
             "always"
         ],
-        "prefer-spread": "error"
+        "prefer-spread": "error",
+        "prefer-template": "error" 
     }
 }
