--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
     "mocha": "^6.1.4",
+    "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.0"
   },
@@ -24,6 +25,7 @@
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
+    "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.11.0"
