--- a/backend/package.json
+++ b/backend/package.json
@@ -12,23 +12,21 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "dotenv": "^8.1.0",
     "eslint": "^5.16.0",
     "mocha": "^6.1.4",
     "morgan": "^1.9.1",
-    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.0"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "argon2": "^0.24.1",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
-    "mysql": "^2.17.1",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "validator": "^10.11.0"
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
