--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,11 @@
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "bcrypt": "^3.0.6",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.8.1",
+    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
-    "koa-jwt": "^3.6.0",
     "koa-route": "^3.2.0",
     "mongoose": "^5.5.9",
     "mongoose-unique-validator": "^2.0.3"
