--- a/backend/package.json
+++ b/backend/package.json
@@ -24,13 +24,13 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@koa/router": "^8.0.1",
     "bcrypt": "^3.0.6",
+    "import-dir": "0.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.8.1",
-    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
-    "koa-route": "^3.2.0",
     "mongoose": "^5.5.9",
     "mongoose-unique-validator": "^2.0.3"
   }
