added routes for notes....need to start writing test suite

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@koa/router": "^8.0.1",
     "bcrypt": "^3.0.6",
     "import-dir": "0.0.1",
+    "json-size": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.8.1",
     "koa-bodyparser": "^4.2.1",
