--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "start": "nodemon -r dotenv/config"
   },
   "author": "sdcaulley",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
