--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sdcaulley",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "devDependencies": {
     "eslint": "^5.16.0"
   }
